CHARTJS/chartjs.github.io/docs/3.2.0/api/interfaces/lineoptions.md
<a href="/docs/3.2.0/" class="home-link router-link-active"><img src="/docs/3.2.0/favicon.ico" alt="Chart.js" class="logo" /> <span class="site-name can-hide">Chart.js</span></a>

<a href="/docs/3.2.0/" class="nav-link">Home</a>

<a href="/docs/3.2.0/api/" class="nav-link router-link-active">API</a>

<a href="/docs/3.2.0/samples/" class="nav-link">Samples</a>

<span class="title">Ecosystem</span> <span class="arrow down"></span>

<span class="title">Ecosystem</span> <span class="arrow right"></span>

-   Awesome
    <span class="sr-only">(opens new window)</span>
-   Slack
    <span class="sr-only">(opens new window)</span>
-   Stack Overflow
    <span class="sr-only">(opens new window)</span>

GitHub

<span class="sr-only">(opens new window)</span>

<a href="/docs/3.2.0/" class="nav-link">Home</a>

<a href="/docs/3.2.0/api/" class="nav-link router-link-active">API</a>

<a href="/docs/3.2.0/samples/" class="nav-link">Samples</a>

<span class="title">Ecosystem</span> <span class="arrow down"></span>

<span class="title">Ecosystem</span> <span class="arrow right"></span>

-   Awesome
    <span class="sr-only">(opens new window)</span>
-   Slack
    <span class="sr-only">(opens new window)</span>
-   Stack Overflow
    <span class="sr-only">(opens new window)</span>

GitHub

<span class="sr-only">(opens new window)</span>

-   API <span class="arrow down"></span>

    -   <a href="/docs/3.2.0/api/" class="sidebar-link">Exports</a>
    -   Enumerations <span class="arrow right"></span>

    -   Classes <span class="arrow right"></span>

    -   Interfaces <span class="arrow down"></span>

        -   <a href="/docs/3.2.0/api/interfaces/activedatapoint.html" class="sidebar-link">ActiveDataPoint</a>
        -   <a href="/docs/3.2.0/api/interfaces/activeelement.html" class="sidebar-link">ActiveElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/animationevent.html" class="sidebar-link">AnimationEvent</a>
        -   <a href="/docs/3.2.0/api/interfaces/arcborderradius.html" class="sidebar-link">ArcBorderRadius</a>
        -   <a href="/docs/3.2.0/api/interfaces/arcelement.html" class="sidebar-link">ArcElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/archoveroptions.html" class="sidebar-link">ArcHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/arcoptions.html" class="sidebar-link">ArcOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/arcprops.html" class="sidebar-link">ArcProps</a>
        -   <a href="/docs/3.2.0/api/interfaces/barcontrollerchartoptions.html" class="sidebar-link">BarControllerChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/barcontrollerdatasetoptions.html" class="sidebar-link">BarControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/barelement.html" class="sidebar-link">BarElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/barhoveroptions.html" class="sidebar-link">BarHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/baroptions.html" class="sidebar-link">BarOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/barprops.html" class="sidebar-link">BarProps</a>
        -   <a href="/docs/3.2.0/api/interfaces/borderradius.html" class="sidebar-link">BorderRadius</a>
        -   <a href="/docs/3.2.0/api/interfaces/bubblecontrollerdatasetoptions.html" class="sidebar-link">BubbleControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/bubbledatapoint.html" class="sidebar-link">BubbleDataPoint</a>
        -   <a href="/docs/3.2.0/api/interfaces/cartesianscaleoptions.html" class="sidebar-link">CartesianScaleOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/cartesianscaletyperegistry.html" class="sidebar-link">CartesianScaleTypeRegistry</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartarea.html" class="sidebar-link">ChartArea</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartcomponent.html" class="sidebar-link">ChartComponent</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartconfiguration.html" class="sidebar-link">ChartConfiguration</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartdata.html" class="sidebar-link">ChartData</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartdatasetproperties.html" class="sidebar-link">ChartDatasetProperties</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartevent.html" class="sidebar-link">ChartEvent</a>
        -   <a href="/docs/3.2.0/api/interfaces/chartmeta.html" class="sidebar-link">ChartMeta</a>
        -   <a href="/docs/3.2.0/api/interfaces/charttyperegistry.html" class="sidebar-link">ChartTypeRegistry</a>
        -   <a href="/docs/3.2.0/api/interfaces/commonelementoptions.html" class="sidebar-link">CommonElementOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/commonhoveroptions.html" class="sidebar-link">CommonHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/complexfilltarget.html" class="sidebar-link">ComplexFillTarget</a>
        -   <a href="/docs/3.2.0/api/interfaces/controllerdatasetoptions.html" class="sidebar-link">ControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/corechartoptions.html" class="sidebar-link">CoreChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/coreinteractionoptions.html" class="sidebar-link">CoreInteractionOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/corescaleoptions.html" class="sidebar-link">CoreScaleOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/datasetcontrollerchartcomponent.html" class="sidebar-link">DatasetControllerChartComponent</a>
        -   <a href="/docs/3.2.0/api/interfaces/dateadapter.html" class="sidebar-link">DateAdapter</a>
        -   <a href="/docs/3.2.0/api/interfaces/defaults.html" class="sidebar-link">Defaults</a>
        -   <a href="/docs/3.2.0/api/interfaces/doughnutanimationoptions.html" class="sidebar-link">DoughnutAnimationOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/doughnutcontroller.html" class="sidebar-link">DoughnutController</a>
        -   <a href="/docs/3.2.0/api/interfaces/doughnutcontrollerchartoptions.html" class="sidebar-link">DoughnutControllerChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/doughnutcontrollerdatasetoptions.html" class="sidebar-link">DoughnutControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/element.html" class="sidebar-link">Element</a>
        -   <a href="/docs/3.2.0/api/interfaces/elementchartoptions.html" class="sidebar-link">ElementChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/elementoptionsbytype.html" class="sidebar-link">ElementOptionsByType</a>
        -   <a href="/docs/3.2.0/api/interfaces/extendedplugin.html" class="sidebar-link">ExtendedPlugin</a>
        -   <a href="/docs/3.2.0/api/interfaces/fillercontrollerdatasetoptions.html" class="sidebar-link">FillerControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/filleroptions.html" class="sidebar-link">FillerOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/fontspec.html" class="sidebar-link">FontSpec</a>
        -   <a href="/docs/3.2.0/api/interfaces/gridlineoptions.html" class="sidebar-link">GridLineOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/interactionitem.html" class="sidebar-link">InteractionItem</a>
        -   <a href="/docs/3.2.0/api/interfaces/interactionmodemap.html" class="sidebar-link">InteractionModeMap</a>
        -   <a href="/docs/3.2.0/api/interfaces/interactionoptions.html" class="sidebar-link">InteractionOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/layoutitem.html" class="sidebar-link">LayoutItem</a>
        -   <a href="/docs/3.2.0/api/interfaces/legendelement.html" class="sidebar-link">LegendElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/legenditem.html" class="sidebar-link">LegendItem</a>
        -   <a href="/docs/3.2.0/api/interfaces/legendoptions.html" class="sidebar-link">LegendOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/linecontrollerchartoptions.html" class="sidebar-link">LineControllerChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/linecontrollerdatasetoptions.html" class="sidebar-link">LineControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/lineelement.html" class="sidebar-link">LineElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/linehoveroptions.html" class="sidebar-link">LineHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/lineoptions.html" class="active sidebar-link">LineOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/lineprops.html" class="sidebar-link">LineProps</a>
        -   <a href="/docs/3.2.0/api/interfaces/parsingoptions.html" class="sidebar-link">ParsingOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/plugin.html" class="sidebar-link">Plugin</a>
        -   <a href="/docs/3.2.0/api/interfaces/pluginchartoptions.html" class="sidebar-link">PluginChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/pluginoptionsbytype.html" class="sidebar-link">PluginOptionsByType</a>
        -   <a href="/docs/3.2.0/api/interfaces/point.html" class="sidebar-link">Point</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointelement.html" class="sidebar-link">PointElement</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointhoveroptions.html" class="sidebar-link">PointHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointoptions.html" class="sidebar-link">PointOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointprefixedhoveroptions.html" class="sidebar-link">PointPrefixedHoverOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointprefixedoptions.html" class="sidebar-link">PointPrefixedOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/pointprops.html" class="sidebar-link">PointProps</a>
        -   <a href="/docs/3.2.0/api/interfaces/polarareacontroller.html" class="sidebar-link">PolarAreaController</a>
        -   <a href="/docs/3.2.0/api/interfaces/polarareacontrollerchartoptions.html" class="sidebar-link">PolarAreaControllerChartOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/polarareacontrollerdatasetoptions.html" class="sidebar-link">PolarAreaControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/radarcontrollerdatasetoptions.html" class="sidebar-link">RadarControllerDatasetOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/radiallinearscale.html" class="sidebar-link">RadialLinearScale</a>
        -   <a href="/docs/3.2.0/api/interfaces/radialscaletyperegistry.html" class="sidebar-link">RadialScaleTypeRegistry</a>
        -   <a href="/docs/3.2.0/api/interfaces/registry.html" class="sidebar-link">Registry</a>
        -   <a href="/docs/3.2.0/api/interfaces/scaletyperegistry.html" class="sidebar-link">ScaleTypeRegistry</a>
        -   <a href="/docs/3.2.0/api/interfaces/scatterdatapoint.html" class="sidebar-link">ScatterDataPoint</a>
        -   <a href="/docs/3.2.0/api/interfaces/scriptablecontext.html" class="sidebar-link">ScriptableContext</a>
        -   <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html" class="sidebar-link">ScriptableLineSegmentContext</a>
        -   <a href="/docs/3.2.0/api/interfaces/scriptablescalecontext.html" class="sidebar-link">ScriptableScaleContext</a>
        -   <a href="/docs/3.2.0/api/interfaces/scriptabletooltipcontext.html" class="sidebar-link">ScriptableTooltipContext</a>
        -   <a href="/docs/3.2.0/api/interfaces/segment.html" class="sidebar-link">Segment</a>
        -   <a href="/docs/3.2.0/api/interfaces/tick.html" class="sidebar-link">Tick</a>
        -   <a href="/docs/3.2.0/api/interfaces/tickoptions.html" class="sidebar-link">TickOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/timescale.html" class="sidebar-link">TimeScale</a>
        -   <a href="/docs/3.2.0/api/interfaces/titleoptions.html" class="sidebar-link">TitleOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/tooltipcallbacks.html" class="sidebar-link">TooltipCallbacks</a>
        -   <a href="/docs/3.2.0/api/interfaces/tooltipitem.html" class="sidebar-link">TooltipItem</a>
        -   <a href="/docs/3.2.0/api/interfaces/tooltiplabelstyle.html" class="sidebar-link">TooltipLabelStyle</a>
        -   <a href="/docs/3.2.0/api/interfaces/tooltipmodel.html" class="sidebar-link">TooltipModel</a>
        -   <a href="/docs/3.2.0/api/interfaces/tooltipoptions.html" class="sidebar-link">TooltipOptions</a>
        -   <a href="/docs/3.2.0/api/interfaces/typedregistry.html" class="sidebar-link">TypedRegistry</a>
        -   <a href="/docs/3.2.0/api/interfaces/visualelement.html" class="sidebar-link">VisualElement</a>

<a href="#interface-lineoptions" class="header-anchor">#</a> Interface: LineOptions
===================================================================================

<a href="#hierarchy" class="header-anchor">#</a> Hierarchy
----------------------------------------------------------

-   [*CommonElementOptions*](/docs/3.2.0/api/interfaces/commonelementoptions.html)

    ↳ **LineOptions**

<a href="#properties" class="header-anchor">#</a> Properties
------------------------------------------------------------

### <a href="#backgroundcolor" class="header-anchor">#</a> backgroundColor

• **backgroundColor**: [*Color*](/docs/3.2.0/api/#color)

Inherited from: [CommonElementOptions](/docs/3.2.0/api/interfaces/commonelementoptions.html).[backgroundColor](/docs/3.2.0/api/interfaces/commonelementoptions.html#backgroundcolor)

Defined in: [index.esm.d.ts:1588 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1588)

------------------------------------------------------------------------

### <a href="#bordercapstyle" class="header-anchor">#</a> borderCapStyle

• **borderCapStyle**: CanvasLineCap

Line cap style. See MDN.

**`default`** 'butt'

Defined in: [index.esm.d.ts:1656 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1656)

------------------------------------------------------------------------

### <a href="#bordercolor" class="header-anchor">#</a> borderColor

• **borderColor**: [*Color*](/docs/3.2.0/api/#color)

Inherited from: [CommonElementOptions](/docs/3.2.0/api/interfaces/commonelementoptions.html).[borderColor](/docs/3.2.0/api/interfaces/commonelementoptions.html#bordercolor)

Defined in: [index.esm.d.ts:1587 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1587)

------------------------------------------------------------------------

### <a href="#borderdash" class="header-anchor">#</a> borderDash

• **borderDash**: *number*\[\]

Line dash. See MDN.

**`default`** \[\]

Defined in: [index.esm.d.ts:1661 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1661)

------------------------------------------------------------------------

### <a href="#borderdashoffset" class="header-anchor">#</a> borderDashOffset

• **borderDashOffset**: *number*

Line dash offset. See MDN.

**`default`** 0.0

Defined in: [index.esm.d.ts:1666 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1666)

------------------------------------------------------------------------

### <a href="#borderjoinstyle" class="header-anchor">#</a> borderJoinStyle

• **borderJoinStyle**: CanvasLineJoin

Line join style. See MDN.

**`default`** 'miter'

Defined in: [index.esm.d.ts:1671 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1671)

------------------------------------------------------------------------

### <a href="#borderwidth" class="header-anchor">#</a> borderWidth

• **borderWidth**: *number*

Inherited from: [CommonElementOptions](/docs/3.2.0/api/interfaces/commonelementoptions.html).[borderWidth](/docs/3.2.0/api/interfaces/commonelementoptions.html#borderwidth)

Defined in: [index.esm.d.ts:1586 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1586)

------------------------------------------------------------------------

### <a href="#capbezierpoints" class="header-anchor">#</a> capBezierPoints

• **capBezierPoints**: *boolean*

true to keep Bézier control inside the chart, false for no restriction.

**`default`** true

Defined in: [index.esm.d.ts:1676 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1676)

------------------------------------------------------------------------

### <a href="#cubicinterpolationmode" class="header-anchor">#</a> cubicInterpolationMode

• **cubicInterpolationMode**: *default* | *monotone*

Interpolation mode to apply.

**`default`** 'default'

Defined in: [index.esm.d.ts:1681 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1681)

------------------------------------------------------------------------

### <a href="#segment" class="header-anchor">#</a> segment

• **segment**: *object*

#### <a href="#type-declaration" class="header-anchor">#</a> Type declaration:

<table><thead><tr class="header"><th style="text-align: left;">Name</th><th style="text-align: left;">Type</th></tr></thead><tbody><tr class="odd"><td style="text-align: left;"><code>backgroundColor</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;<a href="/docs/3.2.0/api/#color"><em>Color</em></a>, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="even"><td style="text-align: left;"><code>borderCapStyle</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;CanvasLineCap, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="odd"><td style="text-align: left;"><code>borderColor</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;<a href="/docs/3.2.0/api/#color"><em>Color</em></a>, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="even"><td style="text-align: left;"><code>borderDash</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;number[], <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="odd"><td style="text-align: left;"><code>borderDashOffset</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;number, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="even"><td style="text-align: left;"><code>borderJoinStyle</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;CanvasLineJoin, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr><tr class="odd"><td style="text-align: left;"><code>borderWidth</code></td><td style="text-align: left;"><a href="/docs/3.2.0/api/#scriptable"><em>Scriptable</em></a>&lt;number, <a href="/docs/3.2.0/api/interfaces/scriptablelinesegmentcontext.html"><em>ScriptableLineSegmentContext</em></a>&gt;</td></tr></tbody></table>

Defined in: [index.esm.d.ts:1693 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1693)

------------------------------------------------------------------------

### <a href="#stepped" class="header-anchor">#</a> stepped

• **stepped**: *boolean* | *before* | *after* | *middle*

true to show the line as a stepped line (tension will be ignored).

**`default`** false

Defined in: [index.esm.d.ts:1691 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1691)

------------------------------------------------------------------------

### <a href="#tension" class="header-anchor">#</a> tension

• **tension**: *number*

Bézier curve tension (0 for no Bézier curves).

**`default`** 0

Defined in: [index.esm.d.ts:1686 <span class="sr-only">(opens new window)</span>](https://github.com/chartjs/Chart.js/blob/0f1d07a/types/index.esm.d.ts#L1686)

<span class="prev"> ← <a href="/docs/3.2.0/api/interfaces/linehoveroptions.html" class="prev">LineHoverOptions</a> </span> <span class="next"> [LineProps](/docs/3.2.0/api/interfaces/lineprops.html) → </span>
